resized and spaced home page images in frame. fixed spacing on success and failurte messages. renamed home page image class home.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -19,8 +19,8 @@
 #description li {display:inline; color:#b4b5b7; font:13px century gothic,sans-serif;}
 #description_l {float:left; padding: 0px 0px 0px 180px;}
 #description_r {float: right; padding: 0px 180px 0px 0px;}
-.user_left {margin: 29px 15px 0px 0px;}
-.user_right {margin: 29px 0px 0px 0px;}
+.user_left {margin: 29px 12px 0px 0px;}
+.user_right {margin: 29px 1px 0px 0px;}
 
 /*This is the code for how-to*/
 p.left {text-align:left; font:14px century gothic,sans-serif; color:#b4b5b7; }
@@ -58,19 +58,22 @@ p.right {text-align:left; font:14px century gothic,sans-serif; color:#b4b5b7;}
 #tryagain {text-align:center; padding: 30px 0px 0px 0px;}
 
 /*This is the code for success pop up  The top and bottom margin will change once it becomes a pop up*/
-#content_sc {width:590px; margin: 430px auto 10px auto; padding: 20px 0px 20px 0px; border-style:solid; border-color:#b4b5b7; border-width:11px;}
+#content_sc {width:590px; margin: 50px auto 0px auto; padding: 20px 0px 20px 0px; border-style:solid; border-color:#b4b5b7; border-width:11px;}
 #p1_sc {text-align:center; margin-right: auto; margin-left: auto;color:#b4b5b7; font:110px century gothic,sans-serif;}
 #p2_sc {text-align:center; margin-right: auto; margin-left: auto;color:#b4b5b7; font:15px century gothic,sans-serif;}
 #tryagain {text-align:center; padding: 30px 0px 0px 0px;}
 #submit_text_sc {color:#b4b5b7; font:15px century gothic,sans-serif; text-decoration: underline;}
 
 /*This is the code for failure pop up  The top and bottom margin will change once it becomes a pop up*/
-#content_f {width:590px; margin: 100px auto 10px auto; padding: 0px 0px 20px 0px; border-style:solid; border-color:#b4b5b7; border-width:11px;}
+#content_f {width:590px; margin: 50px auto 10px auto; padding: 0px 0px 20px 0px; border-style:solid; border-color:#b4b5b7; border-width:11px;}
 #p1_f {text-align:center; margin-right: auto; margin-left: auto;color:#b4b5b7; font:110px century gothic,sans-serif;}
 #p2_f {text-align:center; margin-right: auto; margin-left: auto;color:#b4b5b7; font:15px century gothic,sans-serif;}
 #tryagain {text-align:center; padding: 30px 0px 0px 0px;}
 
-
-
-
+/*This is the code for styling the submission fields;*/
+.field {padding:20px; border: 1px solid #006;}
+.submit_btn {padding:20px;}
+.actions {}
+	
+	
 /*This is the code for testing borders* border-style:solid; border-color:red; border-width:1px;/
